# NombaCrypt

./: .env.example  .gitignore  FULL_DOCUMENTATION.md  Makefile  README.md  development_plan.md  docker-compose.yml
UI/: Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json
UI/src/app/: globals.css  layout.tsx  page.tsx
UI/src/app/accounts/: page.tsx
UI/src/app/billing/: page.tsx
UI/src/app/channels/: page.tsx
UI/src/app/forwarder/: page.tsx
UI/src/app/reconciler/: page.tsx
UI/src/app/security/: page.tsx
UI/src/lib/: api.ts  colors.ts  constants.ts  formatters.ts  types.ts  websocket.ts
backend-engine/: CMakeLists.txt  Dockerfile  build_test.bat  main.cpp
backend-engine/include/billing/: card_tokenizer.hpp  installment_plan.hpp  subscription_manager.hpp
backend-engine/include/buffer/: buffer_telemetry.hpp  ring_buffer.hpp  transaction_slot.hpp
backend-engine/include/core/: config.hpp  constants.hpp  logger.hpp  types.hpp
backend-engine/include/crypto/: anti_replay_ledger.hpp  event_ledger.hpp  hmac_verifier.hpp  sequence_hasher.hpp
backend-engine/include/dunning/: backoff_strategy.hpp  dunning_engine.hpp  failed_charge.hpp
backend-engine/include/forwarder/: downstream_forwarder.hpp  payload_sanitizer.hpp  webhook_target.hpp
backend-engine/include/nomba/: nomba_transactions.hpp
backend-engine/include/nuban/: nuban_cache.hpp  nuban_provisioner.hpp
backend-engine/include/pipeline/: crypto_worker.hpp  worker_pool.hpp
backend-engine/include/rate_limiter/: token_bucket.hpp
backend-engine/include/reconciler/: expected_payment.hpp  reconcile_result.hpp  reconciler.hpp
backend-engine/include/server/: http_server.hpp
backend-engine/src/billing/: card_tokenizer.cpp  installment_plan.cpp  subscription_manager.cpp
backend-engine/src/buffer/: ring_buffer.cpp
backend-engine/src/core/: config.cpp  logger.cpp
backend-engine/src/crypto/: anti_replay_ledger.cpp  event_ledger.cpp  hmac_verifier.cpp  sequence_hasher.cpp
backend-engine/src/dunning/: backoff_strategy.cpp  dunning_engine.cpp
backend-engine/src/forwarder/: downstream_forwarder.cpp  payload_sanitizer.cpp
backend-engine/src/nuban/: nuban_cache.cpp  nuban_provisioner.cpp
backend-engine/src/pipeline/: crypto_worker.cpp  worker_pool.cpp
backend-engine/src/rate_limiter/: token_bucket.cpp
backend-engine/src/reconciler/: reconciler.cpp
backend-engine/src/server/: http_server.cpp
backend-engine/tests/: test_anti_replay.cpp  test_hmac_verifier.cpp  test_reconciler.cpp  test_stress.cpp
control-api/: requirement.txt  run.py  wsgi.py
control-api/app/: __init__.py  models.py  routes.py
control-api/app/routes/: __init__.py  auth_routes.py  channel_routes.py  dunning_routes.py  export_routes.py  forwarder_routes.py  nuban_routes.py  reconciler_routes.py  simulator_routes.py  subscription_routes.py  telemetry_routes.py  toggle_routes.py  transaction_routes.py
control-api/app/services/: engine_bridge.py  nomba_service.py
control-api/config/: development.py  production.py  settings.py
simulator/: __init__.py  legacy_path.py  nombacrypt_path.py  payload_factory.py  requirements.txt  result_collector.py  result_streamer.py  traffic_generator.py
simulator-app/: package-lock.json  package.json
simulator-app/src/app/: globals.css  layout.tsx  page.tsx
(+8 files in other folders)
